@@ -290,6 +290,7 @@ erlangfile @VARRUN@/aprx.state
 #  "KISS"                  \- plain basic KISS mode
 #  "XORSUM" alias "BPQCRC" \- KISS with BPQ "CRC" byte
 #  "SMACK" alias "CRC16"   \- KISS with better CRC
+#  "TNC2"                  \- TNC2 monitor format
 
 # The  serialport  option is overloaded also with connection
 # to remote socket beyond which is a binary transparent 
